Added iframe test + Cheated a way to handle iframe safe-area-insets

--- a/public/example/config-invalid.json
+++ b/public/example/config-invalid.json
@@ -1,11 +1,11 @@
 {
   "options": [
     {
-      "label": "Dark Variant",
+      "label": "A",
       "url": "/example/ceci-nest-pas-une-pic.png"
     },
     {
-      "label": "Light Variant",
+      "label": "B",
       "url": "/example/ceci-nest-pas-une-pic.png"
     }
   ]
