--- a/public/example/config-www.json
+++ b/public/example/config-www.json
@@ -2,19 +2,19 @@
   "options": [
     {
       "label": "Dark Variant",
-      "url": "https://image-compare.leifgehrmann.com/example/dark.png"
+      "url": "https://image-compare.leifgehrmann.com/example/dark.svg"
     },
     {
       "label": "Light Variant",
-      "url": "https://image-compare.leifgehrmann.com/example/light.png"
+      "url": "https://image-compare.leifgehrmann.com/example/light.svg"
     },
     {
       "label": "First Republic",
-      "url": "https://image-compare.leifgehrmann.com/example/first-republic.png"
+      "url": "https://image-compare.leifgehrmann.com/example/first-republic.svg"
     },
     {
       "label": "Second Republic",
-      "url": "https://image-compare.leifgehrmann.com/example/second-republic.png"
+      "url": "https://image-compare.leifgehrmann.com/example/second-republic.svg"
     }
   ]
 }
