--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.12",
     "@cypress/webpack-preprocessor": "^5.11.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-vue": "^2.1.0",
     "@vue/compiler-sfc": "^3.2.29",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "babel-plugin-istanbul": "^6.1.1",
-    "cypress": "^9.3.1",
+    "cypress": "^9.4.1",
     "eslint": "^8.8.0",
     "eslint-plugin-vue": "^8.4.0",
     "postcss": "^8.4.5",
@@ -30,7 +30,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
-    "vite-plugin-istanbul": "^2.4.0",
+    "vite-plugin-istanbul": "2.3.0",
     "vue-eslint-parser": "^8.2.0",
     "vue-tsc": "^0.31.1"
   }
