Fix configuration for cypress 10

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,6 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "node_modules/cypress",
-    "cypress/**/*.ts"
+    "src/**/*.vue"
   ]
 }
