--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "test:e2e": "npx cypress run"
   },
   "dependencies": {
-    "vue": "^3.3.1"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.10.4",
+    "@cypress/code-coverage": "^3.10.7",
     "@cypress/webpack-preprocessor": "^5.17.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "@vitejs/plugin-vue": "^4.2.2",
-    "@vue/compiler-sfc": "^3.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "autoprefixer": "^10.4.14",
     "babel-plugin-istanbul": "^6.1.1",
-    "cypress": "^12.12.0",
-    "eslint": "^8.40.0",
-    "eslint-plugin-vue": "^9.12.0",
-    "postcss": "^8.4.23",
+    "cypress": "^12.13.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-vue": "^9.14.1",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.5",
-    "vite-plugin-istanbul": "4.0.1",
-    "vue-eslint-parser": "^9.2.1",
-    "vue-tsc": "^1.6.4"
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "vite-plugin-istanbul": "^4.1.0",
+    "vue-eslint-parser": "^9.3.0",
+    "vue-tsc": "^1.6.5"
   }
 }
