--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "image-compare",
+  "type": "module",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -10,29 +11,29 @@
     "test:e2e": "npx cypress run"
   },
   "dependencies": {
-    "vue": "^3.3.6"
+    "vue": "^3.3.12"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.12.5",
+    "@cypress/code-coverage": "^3.12.14",
     "@cypress/webpack-preprocessor": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/compiler-sfc": "^3.3.6",
-    "@vue/eslint-config-airbnb": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/compiler-sfc": "^3.3.12",
+    "@vue/eslint-config-airbnb": "^7.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.16",
     "babel-plugin-istanbul": "^6.1.1",
-    "cypress": "^13.3.2",
-    "eslint": "^8.52.0",
-    "eslint-plugin-vue": "^9.18.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.4",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "cypress": "^13.6.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.7",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
     "vite-plugin-istanbul": "^5.0.0",
     "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "^1.8.20"
+    "vue-tsc": "^1.8.25"
   }
 }
