--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,8 @@ jobs:
           start: npm run serve
           command: npm run test:e2e
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           env_vars: NODE
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
