--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.13.11",
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@tailwindcss/vite": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -27,7 +28,6 @@
     "cypress": "^14.0.2",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.32.0",
-    "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
